Initial separation of the single h file into .c's
* Creates a static library to link against
* Moves arq_init into src/arq.c as a proof of concept
* Adds default options for previously required compile time flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,3 +95,6 @@ if (NOT MSVC)
 endif()
 
 add_subdirectory(functional_tests)
+
+add_library(nanoarq STATIC src/arq.c)
+target_include_directories(nanoarq PUBLIC ${CMAKE_SOURCE_DIR})
